fix loader hight on mobile screen

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -60,6 +60,10 @@
     position: relative;
     width: 100%;
     height: calc(100vw / 6 + 20px);
+    @media (max-width: 600px) {
+      height: calc((100vw / 6 + 20px) * 2 + 45px);
+    }
+
   }
 }
 
